# myskoda

./: .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  Justfile  README.md  SKODA_API.md  mkdocs.yaml  pyproject.toml  skoda_api_reference.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release.yml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
docs/: api_endpoints.md  events.md  fetching_data.md  mqtt.md  refreshing_data.md  rest.md  traces.md
fixtures/: Fixtures_for_Kodiaq_Style_2023.yaml  NX53L5_Octavia_2024_Combi_DeepSleep_0.8.2.yaml  Octavia2023_w_aux_heating.yaml  citigoe_iv_2020_ne132e2.yaml  citigoe_iv_2020_ne14e2_style.yaml  citigoe_iv_2021_ne142e2_best_of.yaml  citigoe_iv_2021_ne14e2_best_of.yaml  djapollo_enyaq85_2025.yaml  djapollo_enyaq_5AZJK2_85.yaml  djapollo_enyaq_85_2025.yaml  djapollo_enyaq_85_2025_outsidetemp.yaml  djapollo_enyaq_85_5AZJK2.yaml  elroq_2025_PYLJK2_85.yaml  elroq_2025_PYLQK2_Sportline.yaml  enyaq_2023_5AZJJ2_80.yaml  enyaq_2024_5AZJK2_85.yaml  enyaq_2025_5azjk2_85.yaml  kamiq.yaml  kamiq_2021_NW44KD_crossover.yaml  karoq-se-l_2023.yaml  karoq_2020_nu74nd_businessline.yaml  karoq_2022_nu74nv_se_l_expired_subscription.yaml  karoq_2023_NU74MD_se_l.yaml  kodiaq_2023_NS74QZ_style.yaml  kodiaq_2024_ps7d6z_exclusive.yaml  kodiaq_iv_2024_ps7dyc_selection.yaml  my_favorite_car.yaml  nu74nv_karoq_expired_subscription.yaml  nx53l5_octavia_2024_combi_0.15.4.yaml  nx53l5_octavia_2024_combi_deepsleep_0.8.3.yaml  octavia_2021_NX54ED_style.yaml  octavia_2021_tdi_with_aux_heater.yaml  octavia_2022.yaml  octavia_2022_NX34ED_cng.yaml  octavia_2022_NX36QD_rs_plus.yaml  octavia_2023_NX34JD_style.yaml  octavia_2023_NX53L5_combi.yaml  octavia_2024_NX53L5_combi.yaml  octavia_2025_pv5d7d_selection.yaml  octavia_iv_2021_nx56xc_combi_rs.yaml  (+22 more)
myskoda/: __init__.py  __version__.py  anonymize.py  authorization.py  cli.py  const.py  event.py  firebase.py  mqtt.py  myskoda.py  rest_api.py  utils.py  vehicle.py
myskoda/auth/: authorization.py  csrf_parser.py  utils.py
myskoda/cli/: __init__.py  gen_fixtures.py  mqtt.py  operations.py  raw_request.py  requests.py  utils.py
myskoda/models/: __init__.py  air_conditioning.py  auxiliary_heating.py  charging.py  charging_history.py  chargingprofiles.py  common.py  departure.py  driving_range.py  driving_score.py  fixtures.py  garage.py  health.py  info.py  loyalty_program.py  maintenance.py  mqtt.py  operation_request.py  position.py  service_event.py  software_status.py  spin.py  status.py  trip_statistics.py  user.py  vehicle_connection_status.py  vehicle_event.py  vehicle_ignition_status.py  vehicle_info.py  widget.py
myskoda/models/event/: __init__.py  service.py  vehicle.py
playground/: index.php
scripts/: gen_fixtures.py  gen_ref_nav.py
tests/: conftest.py  test_anonymize.py  test_auth.py  test_cli.py  test_driving_range.py  test_firebase.py  test_generated.py  test_mqtt.py  test_myskoda.py  test_operations.py  test_rest_api.py  test_rest_api_loyalty.py  test_service_event.py  test_status.py  test_trip_statistics.py  test_utils.py  test_vehicle.py
tests/fixtures/enyaq/: charging-profiles.json  software-version-no-update.json  software-version-precondition-failed.json  software-version.json
tests/fixtures/events/: service_event_charging_charging_error.json
tests/fixtures/loyalty_program/: loyalty-badge.json  loyalty-badges.json  loyalty-challenges.json  loyalty-details.json  loyalty-member.json  loyalty-rewards.json  loyalty-salesforce.json  loyalty-transactions.json
tests/fixtures/mqtt/: mqtt_auth.passwd
tests/fixtures/other/: charging-statistics.json  single-trip-statistics-timezones.json  widget-inmotion.json  widget-parked.json  widget.json
tests/fixtures/superb/: driving-score.json  garage_vehicles_LK_liftback.json  trip-statistics-iV-month-2.json  trip-statistics-iV-week-1.json  trip-statistics-iV.json  vehicle-equipment-iV.json  vehicle-info-iV.json  vehicle-renders-iV.json  vehicle-status-left-back-door-trunk-bonnet-opened.json
