[tool.poetry]
name = "myskoda"
version = "0.12.2"
description = "Library for interaction with the MySkoda APIs."
authors = [
    "Frederick Gnodtke <frederick@gnodtke.net>",
    "WebSpider <bacardicoke@gmail.com>",
    "Fabrice Devaux <fabrice.devaux@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = "^3"
aiomqtt = "^2.0"
asyncclick = { version = "^8.1.7.2", optional = true }
asyncio = "^3"
coloredlogs = { version = "^15.0.1", optional = true }
paho-mqtt = "^1"
pyjwt = "^2"
python = ">=3.12.0, <4.0"
pyyaml = "^6"
termcolor = { version = "^2.4.0", optional = true }
mashumaro = { extras = ["orjson"], version = "^3.13.1" }
mkdocs = { extras = ["gen-files"], version = "^1.6.1", optional = true }
mkdocstrings = { extras = ["python"], version = ">=0.26.1,<0.28.0", optional = true }
mkdocs-gen-files = { version = "^0.5.0", optional = true }
mkdocs-literate-nav = { version = "^0.6.1", optional = true }
pygments = { version = "^2.18.0", optional = true }

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.379"
pytest = "^8"
pytest-asyncio = "^0"
ruff = ">=0.6.4,<0.8.0"
pytest-cov = ">=5,<7"
aioresponses = "^0.7.6"
amqtt = "0.11.0-beta1"
setuptools = "^75.2.0"

[tool.poetry.scripts]
myskoda = "myskoda.cli:cli"

[tool.poetry.extras]
cli = ["asyncclick", "coloredlogs", "termcolor", "pygments"]
docs = ["mkdocs", "mkdocstrings", "mkdocs-gen-files", "mkdocs-literate-nav"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "COM812", # missing-trailing-comma
    "D101",   # undocumented-public-class
    "D103",   # undocumented-public-function
    "D203",   # one-blank-line-before-class
    "D211",   # blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "FBT001", # boolean-type-hint-positional-argument
    "FBT002", # boolean-default-value-positional-argument
    "FIX002", # line-contains-todo
    "ISC001", # single-line-implicit-string-concatenation
    "S101",   # assert (used in tests)
    "T201",   # print
    "TD003",  # missing-todo-link

]
select = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = ["myskoda/cli/*"]
