[project]
name = "myskoda"
dynamic = ["version"]
description = "Library for interaction with the MySkoda APIs."
authors = [
  {name = "Frederick Gnodtke", email = "frederick@gnodtke.net"},
  {name = "WebSpider", email = "bacardicoke@gmail.com"},
  {name = "Fabrice Devaux", email = "fabrice.devaux@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
  "aiohttp ~=3.11",
  "aiomqtt ~=2.2",
  "asyncio ~=3.4",
  "mashumaro[orjson] ~=3.13",
  "pyjwt ~=2.10",
  "pyyaml ~=6.0"
]

[dependency-groups]
dev = [
  "aioresponses ~=0.7",
  "amqtt ==0.11.0-beta1",
  "pyright ~=1.1",
  "pytest ~=8.0",
  "pytest-asyncio ~=0.0",
  "pytest-cov >=5,<7",
  "ruff >=0.6.4,<0.12.0",
  "setuptools >=75.2,<77.0"
]

[project.optional-dependencies]
cli = [
  "asyncclick ~=8.1",
  "coloredlogs ~=15.0",
  "termcolor ~=2.4",
  "pygments ~=2.18"
]
docs = [
  "mkdocs ~=1.6",
  "mkdocstrings[python] >=0.26.1,<0.30.0",
  "mkdocs-gen-files ~=0.5",
  "mkdocs-literate-nav ~=0.6"
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.scripts]
myskoda = "myskoda.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "COM812", # missing-trailing-comma
  "D101", # undocumented-public-class
  "D103", # undocumented-public-function
  "D107", # undocumented-public-init
  "D203", # one-blank-line-before-class
  "D211", # blank-line-before-class
  "D213", # multi-line-summary-second-line
  "FBT001", # boolean-type-hint-positional-argument
  "FBT002", # boolean-default-value-positional-argument
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "S101", # assert (used in tests)
  "T201", # print
  "TD003", # missing-todo-link
]
select = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"

[tool.coverage.run]
omit = ["myskoda/cli/*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
